# rust-firefox-all-open-urls

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
