[package]
name = "firefox-open-urls-parser"
version = "0.1.0"
authors = ["Gabe Berke-Williams <gabebw@gabebw.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
glob = "0.3.0"
lz4 = "1.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
